# BF-EXPERIMENT

./: .gitattributes  .gitignore  README.md
bf-interpretor/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.bf  run_stress.sh
bf-interpretor/include/: bf_brackets.h  bf_vm.h
bf-interpretor/programs/bfpp/: hello_world.bfpp  include_expected.bf  include_main.bfpp  pass_through.bfpp  pass_through_expected.bf
bf-interpretor/programs/stress/: big_output.bf  hello_world.bf  loop_heavy.bf  memory_walk.bf  move_add.bf
bf-interpretor/programs/tests/: loop_small.bf  memory_walk.bf  scan_left.bf  scan_right.bf
bf-interpretor/scripts/: test_all.sh  test_bf.sh  test_bfpp.sh
bf-interpretor/src/: bf_brackets.cpp  bf_vm.cpp  brackets.rs  io.rs  ir.rs  lib.rs  main.cpp  main.rs  opt.rs  parse.rs  vm.rs
bf-interpretor/src/bfpp/: driver.rs  error.rs  include.rs  mod.rs  repeat.rs
bf-interpretor/tests/: equivalence.rs  integration_bf.rs  unit_brackets.rs  unit_ir.rs  unit_opt.rs  unit_parse.rs  unit_vm.rs
